# mem-aead-mrs

./: Cargo.toml  README.md
src/: common.rs  lib.rs
tests/: kat.rs  kat_mrs_blake2p.txt  test.rs
tests/aead/: blake2-p.rs  mod.rs
