[package]
name = "mem-aead-mrs"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
description = "Misuse-Resistant Sponge Authenticated Encryption Mode"
repository = "https://github.com/quininer/mem-aead-mrs"
keywords = [ "cryptography", "aead" ]
categories = [ "cryptography", "no-std" ]
license = "MIT"

[dependencies]
arrayref = "0.3"
subtle = { version = "0.6", default-features = false }
byteorder = { version = "1.0", default-features = false }

[dev-dependencies]
rand = "0.5"
