[package]
name = "mem-aead-mrs"
version = "0.1.1"
authors = ["quininer <quininer@live.com>"]
description = "Misuse-Resistant Sponge Authenticated Encryption Mode"
repository = "https://github.com/quininer/mem-aead-mrs"
keywords = [ "cryptography", "aead" ]
categories = [ "cryptography", "no-std" ]
license = "MIT"
edition = "2018"

[dependencies]
arrayref = "0.3"
subtle = { version = "2", default-features = false }
byteorder = { version = "1", default-features = false }

[dev-dependencies]
rand = "0.7"
